# telegram-busca-vagas-bot

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.docker/: docker-compose.yml
.github/workflows/: deploy.yml
app/: api_integration.py  constants.py  error_handler.py  exceptions.py  handlers.py  main.py  models.py  settings.py  utils.py
