[tool.poetry]
name = "telegram-busca-vagas-bot"
version = "1.6.0"
description = ""
authors = ["Maksuel Nascimento <mk-nascimento@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
python-telegram-bot = { extras = ["job-queue"], version = "^20.7" }
requests = "~2.31"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.2.0"
isort = "^5.13.2"
ipython = "^8.21.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
extend-exclude = ['.*']

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = 'clear; ruff . && blue --check . --diff'
format = 'clear; blue -l 88 . && isort .'
start = 'clear; poetry run ipython -m app.main'
export = 'poetry export --without-hashes -f requirements.txt -o requirements.txt'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
